--- a/capitulo-2/index.html
+++ b/capitulo-2/index.html
@@ -20,7 +20,7 @@
                 
                 <article class="faq-item">
                     <h2>Volumen 5</h2>
-                    <h3>Capítulo 2 : Una mañana impactante - ¡¡El caso del asesinato por empalamiento!!</h3>
+                    <h3>Capítulo 2 : Una mañana impactante ¡¡El caso del asesinato por empalamiento!!</h3>
 
                     <p class="novela-description">Me desperté lleno de vida.</p>
                     <p class="novela-description">Probablemente gracias a la capa de tejida con hilo de araña oscura.</p>
